[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Pires",email = "prpires66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "databases[aiosqlite,asyncpg]",
    "sqlalchemy",
    "pyjwt>=2.12.1",
    "psycopg2-binary",
]

[tool.uv]
package = false

[tool.poetry]
package-mode = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
